feat: added light bulb

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <main>
+        <div class="lightbulb"><img id="bulb" src="img/white_lamp.png" alt="Bulb Off"></div>
+    </main>
     <script src="js/script.js"></script>
 </body>
 </html>
