feat: added on/off button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <main>
         <div class="lightbulb"><img id="bulb" src="img/white_lamp.png" alt="Bulb Off"></div>
+        <div><button class="btn-on-off"> Accendi</button></div>
     </main>
     <script src="js/script.js"></script>
 </body>
