--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <main>
+        <div class="night-alert hidden"><p>C'è tanto buio qui, non si vede niente! Ci vorrebbe un po' di luce!</p></div>
         <div class="lightbulb"><img id="bulb" src="img/white_lamp.png" alt="Bulb Off"></div>
         <div><button class="btn-on-off">Accendi</button></div>
     </main>
